Agrego cambios del proyecto